# latent-protocol

./: .dockerignore  .env.example  .gitignore  AGENT_CONTEXT.md  Dockerfile  PRODUCT.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  vercel.json
.claude/skills/: agent-kickbacks.md  latent-protocol.md
.github/workflows/: ci.yml
.vercel/: project.json
agent_kickbacks/: __init__.py  ad_client.py  config.py  mcp_server.py  setup.py  tracker.py
agent_kickbacks/adapters/: __init__.py  cli.py  hermes.py  telegram.py  unified.py
bankr-skill/agent-kickbacks/: SKILL.md
bankr-skill/agent-kickbacks/scripts/: demo.py
docs/: ADVERTISER.md  AD_PLACEMENT_STRATEGY.md  IMPLEMENTATION.md  MCP_MIGRATION.md  OPENCLAW_PLUGIN.md  PLATFORM_AD_PLACEMENT_TECHNICAL_QUESTIONS.md  PLUGIN.md
landing/: .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
landing/.vercel/: project.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: AdBlocks.tsx  AdSurfaces.tsx  AdvertiserPortal.tsx  Economics.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  Nav.tsx  OpenSource.tsx  Plate.tsx  Protocol.tsx  Providers.tsx  Ticker.tsx  UserPortal.tsx
landing/lib/: api.ts  wagmi.ts  x402Client.ts
landing/public/: latent-protocol-skill.md
latent_protocol/: __init__.py  ad_client.py  config.py  footer.py  mcp_server.py  setup.py  wallet.py
latent_protocol/adapters/: __init__.py  claude_code.py  cli.py  hermes.py  hermes_webui.py  telegram.py  unified.py
openclaw-plugin/: README.md  openclaw.plugin.json  package.json  tsconfig.json
openclaw-plugin/skills/latent-protocol/: SKILL.md
openclaw-plugin/src/: index.ts
openclaw-plugin/src/hooks/: message-footer.ts  session-start.ts  thinking-inject.ts  turn-ledger.ts
openclaw-plugin/src/lib/: ad-client.ts  config.ts  footer.ts  tracker.ts
openclaw-plugin/src/types/: node-env.d.ts  openclaw.d.ts
plugin/: __init__.py  ad_client.py  config.py  plugin.yaml  tracker.py  wallet.py
scripts/: blocklist.txt  schema.sql  seed.sql  setup.sh  smoke_test.py
server/: auction.py  config.py  database.py  main.py  matcher.py  models.py  payout_engine.py  safety.py  security.py  tracker.py  x402_payments.py
server/routes/: ads.py  campaigns.py  earnings.py  payouts.py
tests/: test_auction.py  test_block_bidding.py  test_claude_code.py  test_earnings_calc.py  test_footer.py  test_hermes_thinking.py  test_matcher.py  test_payout_engine.py  test_safety.py  test_security.py  test_unified_adapter.py
