# Agent Kickbacks

[project]
name = "agent-kickbacks"
version = "0.1.0"
description = "Crypto-native ad marketplace for AI agents. x402 micropayments on Base."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Agent Kickbacks"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "eth-account>=0.11.0",
]

[project.optional-dependencies]
x402 = [
    "x402[evm,httpx]>=2.13.0",
]
# Client-side MCP server (run on the user's machine; the ad server doesn't need it).
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "alembic>=1.13.0",
]

[project.scripts]
agent-kickbacks-mcp     = "agent_kickbacks.mcp_server:main"
agent-kickbacks-setup   = "agent_kickbacks.setup:main"
agent-kickbacks-adapter = "agent_kickbacks.adapters.unified:adapter_main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "server",
    "server.routes",
    "agent_kickbacks",
    "agent_kickbacks.adapters",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
