# Latent Protocol

[project]
name = "latent-protocol"
version = "0.1.0"
description = "Crypto-native ad marketplace for AI agents. x402 micropayments on Base."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Latent Protocol"},
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "eth-account>=0.11.0",
]

[project.optional-dependencies]
x402 = [
    "x402[evm,httpx]>=2.13.0",
]
# Client-side MCP server (run on the user's machine; the ad server doesn't need it).
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "alembic>=1.13.0",
]

[project.scripts]
latent-mcp           = "latent_protocol.mcp_server:main"
latent-setup         = "latent_protocol.setup:main"
latent-adapter       = "latent_protocol.adapters.unified:adapter_main"
latent-statusline    = "latent_protocol.adapters.claude_code:statusline_main"
latent-hermes-patch  = "latent_protocol.adapters.hermes_webui:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "latent_protocol",
    "latent_protocol.adapters",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
